xmx with inside a container